# currency/server/currency.go
@@ -3,26 +3,31 @@ package server
 import (
 	"context"
 
+	"github.com/zakisk/microservice/currency/data"
 	protos "github.com/zakisk/microservice/currency/protos/currency"
 
 	"github.com/hashicorp/go-hclog"
 )
 
 type Currency struct {
+	rates *data.ExchangeRates
 	l hclog.Logger
 	protos.UnimplementedCurrencyServer
 }
 
 // creates new Currency	
-func NewCurrency(l hclog.Logger) *Currency {
-	return &Currency{l: l}
+func NewCurrency(rates *data.ExchangeRates, l hclog.Logger) *Currency {
+	return &Currency{rates: rates, l: l}
 }
 
 
 func (c *Currency) GetRate(ctx context.Context, rr *protos.RateRequest) (*protos.RateResponse, error) {
 	c.l.Info("Handle GetRate", "base", rr.GetBase(), "destination", rr.GetDestination())
-
-	return &protos.RateResponse{Rate: 0.5}, nil
+	rate, err := c.rates.GetRate(rr.GetBase().String(), rr.GetDestination().String())
+	if err != nil {
+		return nil, err
+	}
+	return &protos.RateResponse{Rate: rate}, nil
 } 
 
 
